[2025-04-12 10:58:57]	No se encontró una version válida	Vista Cart (unestable)
[2025-04-12 13:49:47]	No se encontró una version válida	New assets
[2025-04-12 13:51:52]	No se encontró una version válida	CartItem .kt
[2025-04-12 13:53:16]	No se encontró una version válida	Refactoring: CartAdpter movido
[2025-04-12 14:36:37]	No se encontró una version válida	Algunas variaciones del teclado
[2025-04-13 20:52:53]	No se encontró una version válida	Solucion a problema en tiempo de ejecucion por error de casting en Calc
[2025-04-14 19:48:24]	No se encontró una version válida	Compila OK pero no navega al carrito
[2025-04-15 10:40:55]	No se encontró una version válida	Agregados mas Log.d() pero sin probar
[2025-04-19 18:24:14]	No se encontró una version válida	Eliminado CartViewModel en favor de otro ViewModel
[2025-04-19 19:03:54]	No se encontró una version válida	Ya pasan cantidad de items y subtotal a CartFragment
[2025-04-19 19:50:03]	No se encontró una version válida	Se muestran rows aunque vacaias en CartFragment
[2025-04-19 19:54:53]	No se encontró una version válida	Mas depuracion
[2025-04-19 21:41:14]	No se encontró una version válida	Solucionado problema de Cart
[2025-04-19 22:19:01]	No se encontró una version válida	Solo problemas de colores
[2025-04-22 07:24:20]	No se encontró una version válida	Borrado de carrito --ok
[2025-04-22 07:43:53]	No se encontró una version válida	Automatic update
[2025-04-22 08:00:08]	No se encontró una version válida	Advertencia de `Operacion pendiente`
[2025-04-22 19:27:52]	No se encontró una version válida	Es posible ya actualizar nombre items en vista Calc
[2025-04-22 21:01:19]	No se encontró una version válida	Completamente editables Items desde vista Calc
[2025-04-22 23:42:36]	No se encontró una version válida	Automatic update
[2025-04-23 08:31:29]	No se encontró una version válida	Nueva vista para editar items en modal
[2025-06-02 18:17:59]	No se encontró una version válida	Previo nuevas vistas