@@ -1,0 +1,26 @@
+package cl.friendlypos.mypos.ui.customers
+
+import androidx.compose.material3.*
+import androidx.compose.runtime.Composable
+import androidx.compose.ui.tooling.preview.Preview
+import androidx.compose.foundation.layout.*
+import androidx.compose.ui.Alignment
+import androidx.compose.ui.Modifier
+import androidx.compose.ui.unit.dp
+import androidx.compose.ui.unit.sp
+
+@Composable
+fun CustomersScreen() {
+    Box(
+        modifier = Modifier.fillMaxSize(),
+        contentAlignment = Alignment.Center
+    ) {
+        Text(text = "Clientes", fontSize = 24.sp)
+    }
+}
+
+@Preview(showBackground = true)
+@Composable
+fun CustomersScreenPreview() {
+    CustomersScreen()
+}
