@@ -1,0 +1,1 @@
+cd C:\Users\jayso\AndroidStudioProjects\FriendlyPOS\app\src\main\java\cl\friendlypos\mypos
