@@ -68,3 +68,4 @@
 [2025-04-22 23:42:36]	No se encontró una version válida	Automatic update
 [2025-04-23 08:31:29]	No se encontró una version válida	Nueva vista para editar items en modal
 [2025-06-02 18:17:59]	No se encontró una version válida	Previo nuevas vistas
+[2025-06-03 00:28:16]	No se encontró una version válida	GRADLE configurado para JETPACk COMPOSE
